k8s_files/hello_world_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: flask-app-example
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: flask-app-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flask-app-example
    spec:
      containers:
      - image: iad.ocir.io/servicehealth/octo/hello-world:v2
        name: flask-app
        ports:
        - containerPort: 8080
