k8s_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Test Flask API
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
  name: test-flask-app
spec:
  rules:
  - host: test-jay.octo.oraclecloud.com
    http:
      paths:
      - backend:
          service:
            name: flask-app
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: test-sh-cloud-ssl
status:
  loadBalancer:
    ingress:
    - ip: 147.154.51.156
